            - Added member and global swap() functions.
            - Added tightEncode() and tightEncoding() to help with perfect
              hashing.
            - Replaced the old addTorsionElement() and addTorsionElements()
              with a simpler and much faster addTorsion().  The old routines
              are kept but deprecated, and are reimplemented using addTorsion().
        Enum AngleAlgFlags, Class AngleAlg:
            - New flags to specifiy angle structure enumeration algorithms.
        Class AngleStructure, AngleStructureVector:
            - Angle structures now hold a snapshot of the underlying
              triangulation at the time of creation.  The triangulation
              that was originally used can be safely modified or even deleted.
            - The internal vector representation now uses Integer, not
              LargeInteger.
            - The class AngleStructureVector has been removed completely.
              Just use Vector<Integer> instead.
            - Replaced rawVector() with vector(), which now returns a reference
              (not a pointer) and is now accessible through python.  The old
              rawVector() is kept but deprecated, and returns by reference also.
            - AngleStructure now has copy and move constructors, copy and move
              assignment, and member and global swap() functions.  The old
              clone() is now deprecated; use the copy constructor instead.
            - Changed triangulation() to return a reference, not a pointer.
            - Constructors now take their arguments by reference (and,
              for the vector constructor, optionally an rvalue reference).
            - Added variants of constructors that take a SnapshotRef of
              a triangulation instead of a triangulation.
        Class AngleStructures:
            - Angle structure lists now hold a snapshot of the underlying
              triangulation at the time of creation.  The triangulation