@@ -108,8 +108,15 @@ class AbelianGroup : public ShortOutput<AbelianGroup, true> {
         /**
          * Creates an abelian group as the homology of a chain complex.
          *
-         * \pre M.columns() = N.rows().
-         * \pre The product M*N = 0.
+         * \pre M.columns() = N.rows().  This condition will be tested,
+         * and an exception will be thrown if it does not hold.
+         *
+         * \pre The product M*N = 0.  This condition will \e not be tested
+         * (for efficiency reasons); this is left to the user/programmer
+         * to ensure.
+         *
+         * \exception InvalidArgument The number of columns in \a M does
+         * not match the number of rows in \a N.
          *
          * @param M the `right' matrix in the chain complex; that is,
          * the matrix that one takes the kernel of when computing homology.
@@ -121,8 +128,15 @@ class AbelianGroup : public ShortOutput<AbelianGroup, true> {
          * Creates an abelian group as the homology of a chain complex,
          * using mod-\a p coefficients.
          *
-         * \pre M.columns() = N.rows().
-         * \pre The product M*N = 0.
+         * \pre M.columns() = N.rows().  This condition will be tested,
+         * and an exception will be thrown if it does not hold.
+         *
+         * \pre The product M*N = 0.  This condition will \e not be tested
+         * (for efficiency reasons); this is left to the user/programmer
+         * to ensure.
+         *
+         * \exception InvalidArgument The number of columns in \a M does
+         * not match the number of rows in \a N.
          *
          * @param M the `right' matrix in the chain complex; that is,
          * the matrix that one takes the kernel of when computing homology.
